# ct_image_to_pic_list

./: README.md  pyproject.toml
ct_image_to_pic_list/: __init__.py  main.py
